--- a/client/fields.jade
+++ b/client/fields.jade
@@ -602,7 +602,7 @@ template(name='boolean_edit')
     //- div
     .ui.circular.button.toggle_boolean(class="#{boolean_toggle_class} #{classes}" title=tooltip)
         if field_value
-            i.green.checkmark.icon
+            i.green.checkmark.large.invert.icon
         else
             i.circle.outline.icon
         //- .ui.compact.button.toggle_boolean(class=boolean_toggle_class)
