--- a/client/client.jade
+++ b/client/client.jade
@@ -62,14 +62,8 @@ template(name='layout')
             // .scrolling
         // if currentUser
         //     +bottom_nav
-    +chatpop
+    // +chatpop
     // +footer
-    +ad
-    
-    
-template(name='ad')
-    .ui.fluid.inverted.segment
-        .ui.header ad
 
 
 
