--- a/client/questions.jade
+++ b/client/questions.jade
@@ -7,6 +7,7 @@ template(name='questions')
             // .ui.icon.input
             //     i.plus.icon
             //     input.ask_question(type='text' placeholder='ask question')
+            +cloud filter='question'
             .ui.header total bounty available
             .ui.header total bounty earned
             if selected_tags
